--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ package_dir =
 packages = find:
 install_requires =
     # your dependencies here
-    testspace-python
+    testspace-python @ git+https://github.com/s2technologies/testspace-python
     Click
     rich
     pyyaml
